add new section notebook

--- a/hybrids_notebook.ipynb
+++ b/hybrids_notebook.ipynb
@@ -74,12 +74,12 @@
    "source": [
     "## Read the xyz file\n",
     "\n",
-    "With the following code, the xyz file of the molecule is read and the corresponding atom coordinates are stored into a list:"
+    "With the following code, the xyz file of the molecule is read and the corresponding atom coordinates are stored into a list. We remind that the typical structure of an xyz file is the following: a first row specifying the number of atoms ($N_{at}$) in the structure, a second row specifying the title (optional, it can be left blank) and then a list of atom labels and coordinates (in the format \"Label x y z\")."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "d5ab47ca",
    "metadata": {},
    "outputs": [
@@ -154,12 +154,12 @@
    "id": "617bda7f",
    "metadata": {},
    "source": [
-    "Once we have executed the read_xyz() function, we can print some information about the molecule, such as the total number of atoms and the number of C atoms:"
+    "Once we have executed the `read_xyz()` function, we can print some information about the molecule, such as the total number of atoms and the number of C atoms:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "a5a35aee",
    "metadata": {},
    "outputs": [
@@ -168,13 +168,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "##################################################\n",
+      "################################################################################\n",
       "\n",
       "filename:                coronene.xyz\n",
       "number of atoms:         36\n",
       "number of distinct C:    24\n",
       "\n",
-      "##################################################\n"
+      "################################################################################\n"
      ]
     }
    ],
@@ -188,22 +188,24 @@
     "    sys.exit(\"ERROR! No C atoms in the xyz file!\")\n",
     "\n",
     "print(\"\")\n",
-    "print('#'*50)\n",
+    "print('#'*80)\n",
     "print(\"\")\n",
     "print(\"filename:                %s\" % file)\n",
     "print(\"number of atoms:         %d\" % n_atoms)\n",
     "print(\"number of distinct C:    %d\" % n_carbons)\n",
     "print(\"\")\n",
-    "print('#'*50)"
+    "print('#'*80)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "261e10a4",
+   "cell_type": "markdown",
+   "id": "ef441236",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Finding nearest-neighbors \n",
+    "\n",
+    "To compute the relevant bond angles between each atoms and its substituents, we first need to identify "
+   ]
   },
   {
    "cell_type": "code",
