intro to section find nn

--- a/hybrids_notebook.ipynb
+++ b/hybrids_notebook.ipynb
@@ -154,7 +154,7 @@
    "id": "617bda7f",
    "metadata": {},
    "source": [
-    "Once we have executed the `read_xyz()` function, we can print some information about the molecule, such as the total number of atoms and the number of C atoms:"
+    "Once we have executed the `read_xyz()` function, we can print some information about the molecule, such as the total number of atoms and the number of C atoms. Remind that this notebook and the corresponding Python code has been thought to illustrate the computation of the hybridization indexes of C atoms in a carbon-based molecular systems (hydrocarbons, aromatic molecules, polyciclic aromatic hydrocarbons, etc.). Therefore, we exit the code if the xyz does not contain C atoms. One can modify and re-use the code if needed for other purposes. "
    ]
   },
   {
@@ -199,12 +199,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef441236",
+   "id": "0b2442fe",
    "metadata": {},
    "source": [
     "## Finding nearest-neighbors \n",
     "\n",
-    "To compute the relevant bond angles between each atoms and its substituents, we first need to identify "
+    "To compute the relevant bond angles for the computation of hybridization indexes, we first need to identify the nearest-neighbors (4, the valence of C atoms) of C atoms. In the following, we will actually identify the nn of any atoms in the xyz file. "
    ]
   },
   {
