add nn() function to notebook

--- a/hybrids_notebook.ipynb
+++ b/hybrids_notebook.ipynb
@@ -204,16 +204,70 @@
    "source": [
     "## Finding nearest-neighbors \n",
     "\n",
-    "To compute the relevant bond angles for the computation of hybridization indexes, we first need to identify the nearest-neighbors (4, the valence of C atoms) of C atoms. In the following, we will actually identify the nn of any atoms in the xyz file. "
+    "To compute the relevant bond angles for the computation of hybridization indexes, we first need to identify  nearest-neighbors of C atoms. Here, we are interested in just the first 3 nearest-neighbors, since it assumed we are dealing with $\\pi$-conjugated systems."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d79954ab",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Converting coordinates to NumPy array\n",
+    "coord_np = np.array(coordinates)\n",
+    "\n",
+    "def nn(i, coord):\n",
+    "    \"\"\" This function determines the first three nearest-neighbors of an atom.\n",
+    "\n",
+    "    Args:\n",
+    "        i (integer): index of the target atom \n",
+    "        coord (NumPy array): array specifying xyz coordinates of atoms in the molecule\n",
+    "\n",
+    "    Returns:\n",
+    "        nn_indx (list): list of nearest-neighbors' indexes\n",
+    "        nn_dist (list): list of corresponding distances from target atom (i.e. bond distances)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Finding number of atoms\n",
+    "    natom, ncoord = coord.shape\n",
+    "\n",
+    "    # Computing Euclidean distances \n",
+    "    dist_list = np.array([np.linalg.norm(coord[i]-coord[j]) for j in range(natom) ])\n",
+    "    nn_indx = list(np.argsort(dist_list)[1:4])\n",
+    "    nn_dist = dist_list[nn_indx]\n",
+    "\n",
+    "    return nn_indx, nn_dist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c7b1070",
+   "metadata": {},
+   "source": [
+    "As an example, let find the nearest-neighbors of the atom of label 1 and the corresponding bond distances:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "21fc0104",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[26, 0, 2] [1.08689772 1.37369383 1.4251057 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Finding nearest-neighbors of atom 1 and the corresponding bond distances:\n",
+    "nn_1, nn_dist_1 = nn(1, coord_np)\n",
+    "\n",
+    "print(nn_1, nn_dist_1)"
+   ]
   }
  ],
  "metadata": {
