add use example of nn() funct to notebook

--- a/hybrids_notebook.ipynb
+++ b/hybrids_notebook.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "d5ab47ca",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "a5a35aee",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "d79954ab",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
     "coord_np = np.array(coordinates)\n",
     "\n",
     "def nn(i, coord):\n",
-    "    \"\"\" This function determines the first three nearest-neighbors of an atom.\n",
+    "    \"\"\" This function determines the first three nearest-neighbors of an atom from the xyz file.\n",
     "\n",
     "    Args:\n",
     "        i (integer): index of the target atom \n",
@@ -245,12 +245,12 @@
    "id": "4c7b1070",
    "metadata": {},
    "source": [
-    "As an example, let find the nearest-neighbors of the atom of label 1 and the corresponding bond distances:"
+    "As an use example of the above function, let find the nearest-neighbors of the atom of label 1 and the corresponding bond distances:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "21fc0104",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[26, 0, 2] [1.08689772 1.37369383 1.4251057 ]\n"
+      "Nearest-neighbors of Atom 1 ( a C atom) are: [26, 0, 2].\n",
+      "Corresponding bond distances in Angstrom: [1.08689772 1.37369383 1.4251057 ]\n"
      ]
     }
    ],
@@ -266,8 +267,17 @@
     "# Finding nearest-neighbors of atom 1 and the corresponding bond distances:\n",
     "nn_1, nn_dist_1 = nn(1, coord_np)\n",
     "\n",
-    "print(nn_1, nn_dist_1)"
+    "print(f\"Nearest-neighbors of Atom 1 ( a {atoms[1]} atom) are: {nn_1}.\")\n",
+    "print(f\"Corresponding bond distances in Angstrom: {nn_dist_1}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "294c4c46",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
