modify angle function

--- a/hybrids_notebook.ipynb
+++ b/hybrids_notebook.ipynb
@@ -272,9 +272,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3c161aa5",
+   "metadata": {},
+   "source": [
+    "## Computing bond angles\n",
+    "\n",
+    "We are now in position to compute the bond angles for any atoms in the molecule. Bond angles are simply given by the dot product between (normalized) bond vectors $v_i$\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\cos(\\theta_{ij}) = \\frac{ v_i \\cdot v_j}{||v_i|| ||v_j||}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "294c4c46",
+   "id": "b5f67634",
    "metadata": {},
    "outputs": [],
    "source": []
