add bond angle section to notebook

--- a/hybrids_notebook.ipynb
+++ b/hybrids_notebook.ipynb
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c161aa5",
+   "id": "8e5ccd19",
    "metadata": {},
    "source": [
     "## Computing bond angles\n",
@@ -282,16 +282,54 @@
     "\n",
     "\\begin{equation}\n",
     "\\cos(\\theta_{ij}) = \\frac{ v_i \\cdot v_j}{||v_i|| ||v_j||}\n",
-    "\\end{equation}"
+    "\\end{equation}\n",
+    "\n",
+    "We can again test the function computing bond angles of Atom 1."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5f67634",
+   "id": "7b77086d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def angle(i, coord_np):\n",
+    "    '''This function computes bond angles of an atom of index i.\n",
+    "\n",
+    "    Args:\n",
+    "        i (integer) : index of the target atom\n",
+    "        coord_np (Numpy array) : array specifying xyz coordinates of atoms in the molecule\n",
+    "    \n",
+    "    Returns:\n",
+    "        dot_list (list) : a list of bond vectors dot products \n",
+    "        angles : a list of bond angles\n",
+    "    '''\n",
+    "    \n",
+    "    # Getting first three-nearest neighbors calling function nn():\n",
+    "    nn_i, dist_nn_i = nn(i, coord_np)\n",
+    "    \n",
+    "    # Building vectors connecting atom i to its nearest neighbors and normalizing them:\n",
+    "    vector_nn = np.array([coord_np[i] - coord_np[nn_i[j]] for j in range(3)])\n",
+    "    unit_vector_nn = np.array([vector_nn[i]/np.linalg.norm(vector_nn[i]) for i in range(3)])\n",
+    "    \n",
+    "    # Computing dot products between units vetors:\n",
+    "    dot_prods = []\n",
+    "    prod1 = np.dot(unit_vector_nn[0], unit_vector_nn[1])\n",
+    "    prod2 = np.dot(unit_vector_nn[1], unit_vector_nn[2])\n",
+    "    prod3 = np.dot(unit_vector_nn[0], unit_vector_nn[2])\n",
+    "    dot_prods.extend([prod1, prod2, prod3])\n",
+    "\n",
+    "    dot_list = list(dot_prods)\n",
+    "    angles = [math.degrees(np.arccos(x)) for x in dot_prods]\n",
+    "\n",
+    "    return dot_list, angles\n",
+    "\n",
+    "# Testing the function against atom 1:\n",
+    "atom1_dot_prods, atom1_angles = angle()\n",
+    "\n",
+    "print(f\"Bond angles of Atom 1 are {})"
+   ]
   }
  ],
  "metadata": {
