modify hybrid function and added to notebook

--- a/hybrids_notebook.ipynb
+++ b/hybrids_notebook.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "id": "d5ab47ca",
    "metadata": {},
    "outputs": [
@@ -154,12 +154,12 @@
    "id": "617bda7f",
    "metadata": {},
    "source": [
-    "Once we have executed the `read_xyz()` function, we can print some information about the molecule, such as the total number of atoms and the number of C atoms. Remind that this notebook and the corresponding Python code has been thought to illustrate the computation of the hybridization indexes of C atoms in a carbon-based molecular systems (hydrocarbons, aromatic molecules, polyciclic aromatic hydrocarbons, etc.). Therefore, we exit the code if the xyz does not contain C atoms. One can modify and re-use the code if needed for other purposes. "
+    "Once we have executed the `read_xyz()` function, we can print some information about the molecule, such as the total number of atoms and the number of C atoms. Remind that this notebook and the corresponding Python code has been thought to illustrate the computation of the hybridization indexes of C atoms in a carbon-based molecular systems (hydrocarbons, aromatic molecules, polyciclic aromatic hydrocarbons, etc.). Therefore, we exit the code if the xyz does not contain C atoms. One can modify and re-use the code if needed for other purposes. Test the code below by inserting the name of a model xyz file uploaded in this repository (e.g. `coronene.xy`):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "id": "a5a35aee",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "id": "d79954ab",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "id": "21fc0104",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e5ccd19",
+   "id": "e58a54d1",
    "metadata": {},
    "source": [
     "## Computing bond angles\n",
@@ -289,13 +289,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7b77086d",
+   "execution_count": 45,
+   "id": "eb333d65",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bond angles in degrees of Atom 1 are [120.10770387104152, 121.20708922279258, 118.6852069061659]\n"
+     ]
+    }
+   ],
    "source": [
     "def angle(i, coord_np):\n",
-    "    '''This function computes bond angles of an atom of index i.\n",
+    "    '''This function computes bond angles in degreesB of an atom of index i.\n",
     "\n",
     "    Args:\n",
     "        i (integer) : index of the target atom\n",
@@ -326,10 +334,171 @@
     "    return dot_list, angles\n",
     "\n",
     "# Testing the function against atom 1:\n",
-    "atom1_dot_prods, atom1_angles = angle()\n",
+    "atom1_dot_prods, atom1_angles = angle(1, coord_np)\n",
     "\n",
-    "print(f\"Bond angles of Atom 1 are {})"
+    "print(f\"Bond angles in degrees of Atom 1 are {atom1_angles}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2d8c961",
+   "metadata": {},
+   "source": [
+    "## Computing hybridization indexes and s-weights\n",
+    "\n",
+    "We are finally able to use bond angles and calculate hybridization indexes of C atoms, implementing Equations 1. In the following, we will also compute the corresponding $s$-weights (fractional hybridization in terms of the orbital $s$ components, rather than $p$). The latter are given by:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "s_i = \\frac{1}{1+\\tau_i}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "cee85760",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hybrid(i, coord_np):\n",
+    "    '''This function computes hybridization indexes and s-weights for atom of index i.\n",
+    "    \n",
+    "    Args:\n",
+    "        i (integer) : index of the target atom\n",
+    "        coord_np (Numpy array) : array specifying xyz coordinates of atoms in the molecule\n",
+    "    \n",
+    "    Returns:\n",
+    "        s_hybrids:  a list of s-weights\n",
+    "        p_hybrids : a list of hybridization indexes\n",
+    "    \n",
+    "    '''\n",
+    "    p_hybrids = []\n",
+    "    s_hybrids = []\n",
+    "\n",
+    "    # Getting angles:\n",
+    "    cosines, bond_angles = angle(i, coord_np)\n",
+    "\n",
+    "    # Computing p and s weights\n",
+    "    p1 = - cosines[2]/(cosines[0]*cosines[1])\n",
+    "    s1 = 1.0/(1.0+p1)\n",
+    "\n",
+    "    p2 = -cosines[1]/(cosines[0]*cosines[2])\n",
+    "    s2 = 1.0/(1.0+p2)\n",
+    "\n",
+    "    p3 = -cosines[0]/(cosines[1]*cosines[2])\n",
+    "    s3 = 1.0/(1.0+p3)\n",
+    "\n",
+    "    p_hybrids.extend([p1,p2,p3])\n",
+    "\n",
+    "    # Computing p4 (pi-like orbital hybridization index) exploiting s-weights conservation\n",
+    "    sh = 0.0\n",
+    "    for j in p_hybrids:\n",
+    "        sh += (1.0+j)**(-1)\n",
+    "    \n",
+    "    # If p4 is singular (pure p hybrid) returns infinity\n",
+    "    if (1.0-sh)==0:\n",
+    "        p4 = float('inf')\n",
+    "    else:\n",
+    "        p4 = 1.0/(1.0-sh)-1.0\n",
+    "   \n",
+    "        \n",
+    "    s4 = 1.0 - (s1+s2+s3)\n",
+    "\n",
+    "    p_hybrids.extend([p4])\n",
+    "    s_hybrids.extend([s1, s2, s3, s4])\n",
+    "\n",
+    "    return s_hybrids, p_hybrids"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b96c6e45",
+   "metadata": {},
+   "source": [
+    "We remind that $s$-weights are bounded, namely $s \\in [0,1]$, where $s=0$ defines a pure $p$ orbital while $s=1$ defines a pure $s$ orbital. In the following, we will print out $s$-weights of the chosen molecule: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "9695c8df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Atom    Label   s-weights\n",
+      "C       0       [0.3514181780271548, 0.31732127435663116, 0.33126054761621404, 0.0]\n",
+      "C       1       [0.3512733904268887, 0.3172691764330546, 0.3314574331400567, 0.0]\n",
+      "C       2       [0.34903470009099524, 0.3020467822140687, 0.34891851769493604, 0.0]\n",
+      "C       3       [0.3333863638673045, 0.3333167271944085, 0.33329690893828695, 0.0]\n",
+      "C       4       [0.3333167292646279, 0.33336654147074424, 0.3333167292646279, 0.0]\n",
+      "C       5       [0.3489318486923831, 0.3021363026152337, 0.3489318486923831, 0.0]\n",
+      "C       6       [0.3333863638673045, 0.3333167271944085, 0.33329690893828695, 0.0]\n",
+      "C       7       [0.34903470009099524, 0.3020467822140687, 0.34891851769493604, 0.0]\n",
+      "C       8       [0.3512733904268887, 0.3172691764330546, 0.3314574331400567, 0.0]\n",
+      "C       9       [0.3514181780271548, 0.31732127435663116, 0.33126054761621404, 0.0]\n",
+      "C       10      [0.3333863638673045, 0.3333167271944085, 0.33329690893828695, 0.0]\n",
+      "C       11      [0.34903470009099524, 0.3020467822140687, 0.34891851769493604, 0.0]\n",
+      "C       12      [0.35138978140128563, 0.3172459583967446, 0.33136426020196974, 0.0]\n",
+      "C       13      [0.35138978140128563, 0.3172459583967446, 0.33136426020196974, 0.0]\n",
+      "C       14      [0.3333167292646279, 0.33336654147074424, 0.3333167292646279, 0.0]\n",
+      "C       15      [0.3489318486923831, 0.3021363026152337, 0.3489318486923831, 0.0]\n",
+      "C       16      [0.3514181780271548, 0.31732127435663116, 0.33126054761621404, 0.0]\n",
+      "C       17      [0.3512733904268887, 0.3172691764330546, 0.3314574331400567, 0.0]\n",
+      "C       18      [0.3333863638673045, 0.3333167271944085, 0.33329690893828695, 0.0]\n",
+      "C       19      [0.35138978140128563, 0.3172459583967446, 0.33136426020196974, 0.0]\n",
+      "C       20      [0.35138978140128563, 0.3172459583967446, 0.33136426020196974, 0.0]\n",
+      "C       21      [0.34903470009099524, 0.3020467822140687, 0.34891851769493604, 0.0]\n",
+      "C       22      [0.3512733904268887, 0.3172691764330546, 0.3314574331400567, 0.0]\n",
+      "C       23      [0.3514181780271548, 0.31732127435663116, 0.33126054761621404, 0.0]\n",
+      "H       24      Not a C! Not computed\n",
+      "H       25      Not a C! Not computed\n",
+      "H       26      Not a C! Not computed\n",
+      "H       27      Not a C! Not computed\n",
+      "H       28      Not a C! Not computed\n",
+      "H       29      Not a C! Not computed\n",
+      "H       30      Not a C! Not computed\n",
+      "H       31      Not a C! Not computed\n",
+      "H       32      Not a C! Not computed\n",
+      "H       33      Not a C! Not computed\n",
+      "H       34      Not a C! Not computed\n",
+      "H       35      Not a C! Not computed\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Computing s-weights for any C in the lattice\n",
+    "\n",
+    "print('')\n",
+    "print('')\n",
+    "atom_header = \"Atom\"\n",
+    "label_header = \"Label\"\n",
+    "hybrid_header = \"s-weights\"\n",
+    "\n",
+    "print('{:<8}{:<8}{:<8}'.format(atom_header, label_header, hybrid_header))\n",
+    "\n",
+    "perc_s_pi_like = []\n",
+    "for i in range(n_atoms):\n",
+    "    if atoms[i] == 'C':\n",
+    "        s_weights, p_weights = hybrid(i, coord_np)\n",
+    "        perc_s_pi_like.append(s_weights[3]*100)\n",
+    "        print(\"{:<8}{:<8}{}\".format(atoms[i], i, s_weights))\n",
+    "    else:\n",
+    "        none_string = \"Not a C! Not computed\"\n",
+    "        print(\"{:<8}{:<8}{}\".format(atoms[i], i, none_string))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ed31579",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
