brief result description

--- a/hybrids_notebook.ipynb
+++ b/hybrids_notebook.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "d5ab47ca",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "id": "a5a35aee",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "id": "d79954ab",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "id": "21fc0104",
    "metadata": {},
    "outputs": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "id": "eb333d65",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "id": "cee85760",
    "metadata": {},
    "outputs": [],
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "id": "9695c8df",
    "metadata": {},
    "outputs": [
@@ -493,9 +493,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e3a791f9",
+   "metadata": {},
+   "source": [
+    "For the coronene molecule, which is a small planar polycyclic aromatic hydrocarbon (PAH), the 4-tuple of hybrid orbitals consists of three hybrids with roughly 33% of $s$-character, namely the $sp^2$ hybrid orbitals which make up the $\\sigma$-network, and a fourth pure $p$ hybrid orbital ($s=0$) responsible for $\\pi$-conjugation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ed31579",
+   "id": "05206ea8",
    "metadata": {},
    "outputs": [],
    "source": []
