add timer decorator to jupyter-notebook

--- a/hybrids_notebook.ipynb
+++ b/hybrids_notebook.ipynb
@@ -87,7 +87,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "xyz? coronene.xyz\n"
+      "xyz? coronene.xyz\n",
+      "read_xyz took 0.0012919902801513672s to run\n"
      ]
     }
    ],
@@ -101,8 +102,38 @@
     "import numpy as np\n",
     "import math\n",
     "import matplotlib.pyplot as plt\n",
+    "import time\n",
+    "\n",
+    "# Defining a decorator to return how long a function took to run:\n",
+    "def timer(func):\n",
+    "    \"\"\"\n",
+    "    Decorator that prints how long a function took to run.\n",
+    "\n",
+    "    Args: \n",
+    "        func (callable) : the function being decorated\n",
+    "    \n",
+    "    Returns:\n",
+    "        callable: the decorated function\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        # Get the current time:\n",
+    "        time_start = time.time()\n",
+    "\n",
+    "        # Call the decorated function and store the result\n",
+    "        result = func(*args, **kwargs)\n",
+    "\n",
+    "        # Get the total time it took to run and print it\n",
+    "        total_time = time.time() - time_start\n",
+    "\n",
+    "        print('{} took {}s to run'.format(func.__name__, total_time))\n",
+    "        return result\n",
+    "    return wrapper\n",
+    "\n",
+    "\n",
     "\n",
     "# Defining function read_xyz() that reads a xyz file (filename)\n",
+    "@timer\n",
     "def read_xyz(filename):\n",
     "    \"\"\"This function reads atom labels and coordinates from a xyz file.\n",
     "    \n",
@@ -499,14 +530,6 @@
    "source": [
     "For the coronene molecule, which is a small planar polycyclic aromatic hydrocarbon (PAH), the 4-tuple of hybrid orbitals consists of three hybrids with roughly 33% of $s$-character, namely the $sp^2$ hybrid orbitals which make up the $\\sigma$-network, and a fourth pure $p$ hybrid orbital ($s=0$) responsible for $\\pi$-conjugation."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "05206ea8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
